--- a/addons/pvr.team-mediaportal.tvserver/resources/language/English/strings.xml
+++ b/addons/pvr.team-mediaportal.tvserver/resources/language/English/strings.xml
@@ -11,4 +11,7 @@
     <string id="30007">Import only Radio Channels from group</string>
     <string id="30008">Convert hostname to IP-adress</string>
     <string id="30009">EPG: Read genre strings (slow)</string>
+    <string id="30010">Waiting time after tuning a channel (ms)</string>
+    <string id="30011">Play recordings directly (no streaming)</string>
+    <string id="30012">Mediaportal recordings directory</string>
 </strings>
