--- a/addons/pvr.fortherecord.argus/changelog.txt
+++ b/addons/pvr.fortherecord.argus/changelog.txt
@@ -2,3 +2,5 @@ v0.0.1.107 (27-11-2010)
 - First release of the ForTheRecord PVR client (Windows only, TSReader)
 - Implemented: Channel retrieval, tuning of live TV and live radio (tsbuffer only, no rtsp), basic EPG
 - Tested ForTheRecord Argus version: v1.5.0.3
+v0.0.1.108 (08-01-2011)
+- EPG data retrieval fixed for dates where month and day have less than 2 digits (credits: Red_F)
