--- a/addons/pvr.team-mediaportal.tvserver/changelog.txt
+++ b/addons/pvr.team-mediaportal.tvserver/changelog.txt
@@ -1,8 +1,6 @@
 v1.1.2.101:
 - Fixed: "Include radio" setting
-- Fixed: missing defaults for settings "sleeponrtspurl" and "resolvertsphostname"
 - Changed: cleanup unused settings
-- Changed: increase wait time on TS buffer underrun
 
 v1.1.0.100
 - Rewrite: timer code
@@ -32,5 +30,7 @@ v1.1.0.90
 - Decrease CPU uage when a buffer underrun occurs
 
 v1.1.0.75
-- First release of the TSReader version
 - PVR client should abort connection when the TVServerXBMC version is too old
+
+v1.1.0.60
+- Fix PVR client destroy
